# kwcode

./: .gitignore  QA_BASELINE.txt  QA_LOG.md  README.md  STATUS.md  install.ps1  install.sh  pyproject.toml
.kaiwu/: .pattern_stats.json  PATTERN.md
kaiwu/ast_engine/: __init__.py  graph_builder.py  graph_retriever.py
kaiwu/builtin_experts/: api.yaml  bugfix.yaml  deepseekapi.yaml  docstring.yaml  fastapi.yaml  mybatis.yaml  office_docx.yaml  office_pptx.yaml  office_xlsx.yaml  refactor.yaml  springboot.yaml  sqlopt.yaml  testgen.yaml  typehint.yaml  uniapp.yaml
kaiwu/cli/: main.py  onboarding.py  status_bar.py
kaiwu/core/: checkpoint.py  context.py  context_pruner.py  gate.py  kwcode_md.py  model_capability.py  network.py  orchestrator.py  planner.py  sysinfo.py
kaiwu/experts/: chat_expert.py  debug_subagent.py  generator.py  locator.py  office_handler.py  search_augmentor.py  verifier.py
kaiwu/flywheel/: ab_tester.py  pattern_detector.py
kaiwu/knowledge/: doc_reader.py
kaiwu/llm/: llama_backend.py
kaiwu/mcp/: router_mcp.py
kaiwu/memory/: kaiwu_md.py  pattern_md.py  project_md.py
kaiwu/notification/: flywheel_notifier.py
kaiwu/registry/: expert_loader.py  expert_packager.py  expert_registry.py
kaiwu/scripts/: prompt_optimizer.py
kaiwu/search/: content_fetcher.py  context_compressor.py  duckduckgo.py  extraction_pipeline.py  intent_classifier.py  query_generator.py
kaiwu/stats/: value_tracker.py
kaiwu/tests/: bench_tasks.json  test_core.py  test_debug_subagent.py  test_e2e_p1p2.py  (+4 more)
test_project_multi/: KAIWU.md  new_code.py
(+91 files in other folders)
